test_suite/tests/ui/nightly/fail/invalid_parent/nightly_empty_parent.rs
use clapi::macros::*;

#[command]
fn files(){}

#[subcommand]
fn list(){}

#[subcommand(parent="")]
fn sort(){}

fn main(){}