test_suite/tests/ui/nightly/fail/invalid_parent/nightly_empty_parent.stderr
error: custom attribute panicked
 --> $DIR/nightly_empty_parent.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: `parent` was empty in `fn sort`
